--- a/public/css/index.css
+++ b/public/css/index.css
@@ -198,13 +198,15 @@ footer {
     margin-top: auto;
     width: 100%;
     justify-content: center;
-    padding: 0 9rem 1rem 0;
+    padding-bottom: 1rem;
+    padding-left: 14rem;
+    gap: 8rem;
 }
 
 footer > div {
     display: flex;
     flex-flow: column wrap;
-    padding: 0 5rem;
+    flex: 1;    
 }
 
 footer > div > p:nth-child(2) {
@@ -238,8 +240,8 @@ footer > div > p:nth-child(2) {
     }
 
     footer {
-        padding: 0 1rem;
-        gap: 0;
+        padding: 0 2rem;
+        gap: 1rem;
     }
 
     footer > div {
