--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -12,7 +12,7 @@ title: Bite-Sized Mathematics for Computer Science
     <link rel="icon" type="image/png" sizes="16x16" href={{ "/public/favicon-16x16.png" | url }}>
     <link rel="manifest" href={{ "/public/site.webmanifest" | url }}>
     <link rel="stylesheet" href={{ "/public/css/index.css" | url }}>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href={{ "/public/css/prism-material-light.css" | url }} rel="stylesheet">
     <title>{{ title }}</title>
   </head>
   <body>
