--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -7,12 +7,12 @@ title: Bite-Sized Mathematics for Computer Science
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href={{ "public/apple-touch-icon.png" | url }}>
-    <link rel="icon" type="image/png" sizes="32x32" href={{ "public/favicon-32x32.png" | url }}>
-    <link rel="icon" type="image/png" sizes="16x16" href={{ "public/favicon-16x16.png" | url }}>
-    <link rel="manifest" href={{ "public/site.webmanifest" | url }}>
-    <link rel="stylesheet" href={{ "public/css/index.css" | url }}>
-    <link href={{ "public/css/prism-material-light.css" | url }} rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href={{ "/public/apple-touch-icon.png" | url }}>
+    <link rel="icon" type="image/png" sizes="32x32" href={{ "/public/favicon-32x32.png" | url }}>
+    <link rel="icon" type="image/png" sizes="16x16" href={{ "/public/favicon-16x16.png" | url }}>
+    <link rel="manifest" href={{ "/public/site.webmanifest" | url }}>
+    <link rel="stylesheet" href={{ "/public/css/index.css" | url }}>
+    <link href={{ "/public/css/prism-material-light.css" | url }} rel="stylesheet">
     <title>{{ title }}</title>
   </head>
   <body>
